@@ -1,3 +1,8 @@
+2004-10-11  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* makefile:
+	Use BDIR macros for setup build directories.
+
 2004-10-07  Pascal Obry  <pascal@obry.org>
 
 	* ssl_lib.gpr, crypto_lib.gpr:
